--- a/index.html
+++ b/index.html
@@ -32,8 +32,26 @@
       </div>
     </header>
     <main class="main container">
-      <div class="top_main">
+      <div class="main_img">
         <img src="./assets/img/bergur.png" alt="burgur" />
+      </div>
+      <div class="main_box">
+        <div class="main_textbox">
+          <h2 class="main_title">غذای مورد علاقه ات رو سفارش بده</h2>
+          <p class="main_text">
+            همبرگر طعم های مختلفی دارد  <br>اگر مایل هستید همبرگر گوشت رو امتحان
+            کنید !!!
+          </p>
+          <p class="order_price">مجموع سفارش : <span>875.000</span> تومان</p>
+        </div>
+        <div class="main_btn-box">
+          <button class="order_btn">خرید</button>
+          <div class="order_action">
+            <button class="order_action-increase">+</button>
+            <span class="order_counter">0</span>
+            <button class="order_action-decrease">-</button>
+          </div>
+        </div>
       </div>
     </main>
   </body>
